correccion rutas y estatus code

--- a/dragonball-app/src/app/components/form-login/form-login.component.html
+++ b/dragonball-app/src/app/components/form-login/form-login.component.html
@@ -26,6 +26,11 @@
         }
     </div>
     <button type="button" class="btn btn-sm btn-primary col-12" (click)="onSubmit()">Acceder</button>
+    @if(errorMessage != ''){
+        <div class="text-danger mt-3 txt-sm">
+            <p class="mb-0 text-center">{{errorMessage}}</p>
+        </div>
+    }
 </form>
 
 <div class="d-flex flex-column text-center mt-3">
